# dns-reconciler

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  release.yaml
src/: config.rs  error.rs  lib.rs  main.rs
src/cloudflare/: client.rs  model.rs
src/dns/: desired_state.rs  mod.rs  name.rs  validation.rs
src/leases/: csv.rs  mod.rs  model.rs  watcher.rs
src/sync/: executor.rs  mod.rs  planner.rs
tests/: cloudflare_client.rs  lease_csv.rs
